--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 
   <div class="top-header">
 
+    <h2></h2>
     <h2>The Etalus Archive</h2>
-    <h2>Curated By Kang96</h2>
+    <h2>By Kang96</h2>
 
     <div class='navbar'>
       <a href="#">Home</a>
