LAnding Page Progress

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
     </header>
 
     <section class="space-images">
-      <img src="img/blast.png" class="blast" alt="Rocket blasting off">
-      <img src="img/sky.png" class="sky" alt="Space sky image">
-      <img src="img/launch.png" class="launch" alt="Launching rocket">
+      <img src="img/BlastGREEN.png" class="blast" alt="Rocket blasting off">
+      <img src="img/BlastRED.png" class="sky" alt="Space sky image">
+      <img src="img/BlastPURPLE.png" class="launch" alt="Launching rocket">
     </section>
 
     <section class="visit-planets">
@@ -67,9 +67,9 @@
       </section>
 
       <section class="space-images">
-        <img src="img/blast.png" class="blast" alt="Rocket blasting off">
-        <img src="img/sky.png" class="sky" alt="Space sky image">
-        <img src="img/launch.png" class="launch" alt="Launching rocket">
+        <img src="img/RankedG7.png" class="blast" alt="Rocket blasting off">
+        <img src="img/RankedRCS.png" class="sky" alt="Space sky image">
+        <img src="img/RankedHW.png" class="launch" alt="Launching rocket">
       </section>
 
     <section class="visit-planets">
@@ -92,6 +92,12 @@
           delicate, that if you touched it with a finger it would fall apart. Seeing this has to change a man.</p>
       </section>
 
+      <section class="space-images">
+        <img src="img/blast.png" class="blast" alt="Rocket blasting off">
+        <img src="img/sky.png" class="sky" alt="Space sky image">
+        <img src="img/launch.png" class="launch" alt="Launching rocket">
+      </section>
+
     <section class="walk">
       <div class="walk-text">
         <h3>Thank You</h3>
@@ -104,7 +110,7 @@
       </div>
 
       <div class="walk-img">
-        <img id="walking" src="img/space-walk.png" alt="Space walking astronaut">
+        <img id="walking" src="img/275heightfinal.png" alt="Space walking astronaut">
       </div>
 
     </section>
