--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
       </section>
 
       <section class="space-images">
-        <img src="img/blast.png" class="blast" alt="Rocket blasting off">
-        <img src="img/sky.png" class="sky" alt="Space sky image">
-        <img src="img/launch.png" class="launch" alt="Launching rocket">
+        <img src="img/FrameICE.png" class="blast" alt="Rocket blasting off">
+        <img src="img/FrameUAIR.png" class="sky" alt="Space sky image">
+        <img src="img/FrameSMASH.png" class="launch" alt="Launching rocket">
       </section>
 
     <section class="visit-planets">
