--- a/index.html
+++ b/index.html
@@ -25,18 +25,19 @@
     <h2></h2>
     <h2>The Etalus Archive</h2>
     <h2>By Kang96</h2>
+    <h2></h2>
 
     <div class='navbar'>
       <a href="#">Home</a>
-      <a href="#">Global Rankings</a>
+      <a href="#">Rankings</a>
       <a href="#">VOD Archive</a>
-      <a href="#">Written Guides</a>
-      <a href="#">Support Me</a>
+      <a href="#">Guides</a>
+      <a href="#">Support</a>
     </div>
   </div>
 
   <div class="container home">
-
+    <section></br></section>
 
     <header class="intro">
       <!-- image code here -->
@@ -119,6 +120,7 @@
       <p>Copyright Kang96, Rivals of Aether 2020</p>
     </footer>
 
+    <section></br></section>
   </div>
 </body>
 
