--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 
     <div class='navbar'>
       <a href="#">Home</a>
-      <a href="#">Rankings</a>
-      <a href="#">VOD Archive</a>
-      <a href="#">Guides</a>
-      <a href="#">Support</a>
+      <a href="navbar/Rankings.html">Rankings</a>
+      <a href="navbar/VODArchive.html">VOD Archive</a>
+      <a href="navbar/guides.html">Guides</a>
+      <a href="navbar/Support.html">Support</a>
     </div>
   </div>
 
