--- a/navbar/Guides.html
+++ b/navbar/Guides.html
@@ -1,1 +1,189 @@
-<h2>Test</h2>
+<!doctype html>
+
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Kang96 Etalus Archive </title>
+
+    <link href="https://fonts.googleapis.com/css?family=Russo+One|Ubuntu" rel="stylesheet">
+    <link href="index.css" rel="stylesheet">
+
+    <!--[if lt IE 9]>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+  <![endif]-->
+</head>
+
+<body>
+
+    <!-- navigation code here -->
+
+    <div class="top-header">
+
+        <h2></h2>
+        <h2>The Etalus Archive</h2>
+        <h2>By Kang96</h2>
+        <h2></h2>
+
+        <div class='navbar'>
+            <a href="/index.html">Home</a>
+            <a href="Rankings.html">Rankings</a>
+            <a href="VODArchive.html">VOD Archive</a>
+            <a href="Guides.html">Guides</a>
+            <a href="Support.html">Support</a>
+        </div>
+    </div>
+
+    <div class="container home">
+        <section></br></section>
+
+        <header class="intro">
+            <!-- image code here -->
+
+            <div class="img-earth">
+                <img src="img/main-header.png" alt="Space Horizon">
+            </div>
+
+            <section class="visit-planets">
+                <h3>Study The Potential Within Written Guides</h3>
+                <p>As we got further and further away, it [the Earth] diminished in size. Finally it shrank to the size
+                    of a
+                    marble, the most beautiful you can imagine. That beautiful, warm, living object looked so fragile,
+                    so
+                    delicate, that if you touched it with a finger it would fall apart. Seeing this has to change a man.
+                </p>
+            </section>
+
+            <section class="space-images">
+                <img src="img/GuideABSA.png" class="blast" alt="Rocket blasting off">
+                <img src="img/GuideKRAGG.png" class="sky" alt="Space sky image">
+                <img src="img/GuideRANNO.png" class="launch" alt="Launching rocket">
+            </section>
+
+
+            <section class="walk">
+                <div class="walk-text">
+                    <h3>Matchup Guide:</h3>
+                    <h3>Etalus VS Absa</h3>
+                    </br>
+                    <p><span>Written By NCB</span></p>
+                    <p><span>The Difficulty</span> in this matchup stems from the long range harassment, limited
+                        recoveries, and insane fair-chains that Absa brings.
+                        Luckily, mentors from the Rivals of Aether Academy worked together to write this guide.</p>
+                    <p><span>In General</span>, despite the overwhelming long range poke, deadly aerials, and movement,
+                        Etalus is not at a complete loss. Through
+                        the use of rapid movement, disjoint moves and smart icicle usage - we can apply aerial pressure
+                        to keep Absa right where we
+                        want her.</p>
+                    <p><span>For Movement</span>, Etalus is forced to take the role of aggressor in this matchup.
+                        Through good platform movement
+                        we can mitigate some of the cloud and ftilt options from Absa. Although, it's good to learn how
+                        to reliably parry cloud, ftilt,
+                        thunder line, and the timed explosion. Learning the timing windows and switching up movement
+                        through plats allows us to close the gap.
+                        It's important to note, avoid using DA or Wd for grounded movement, instead electing for running
+                        as this lets use crouch to CC her Ftilt2
+                        immediately. Be mindful when dropping down from plats as, even though Fair and Nair are
+                        effective, we want to avoid Absa's nasty Utilt.</p>
+                    <p><span>For Stage Selection</span>, while they don't have a giant impact on the matchup performance
+                        - because Icicles are critical
+                        to lock down Absa in the air, choosing small maps makes the challenge greater. Prioritize
+                        larger, more open stages to deal with Absa.
+                        Such as Merchant Port or The Fire Capital. Rock Wall is a trade off: while the open stage means
+                        good icicle use, the close blast zones
+                        means that Absa can carry you off stage with fair strings. We're not partial to ToH or Glacial
+                        Fortress because of the close platforms.
+                        Endless Abyss is also very risky: there are no platforms for Absa to hide from the icicles,
+                        there is nothing to assist you in dodging Ftilts,
+                        or clouds. Tempest Peak is alright, however sometimes the side platforms can hurt your
+                        edgeguarding if Absa recovers low.</p>
+                    <p><span>For Recovery</span>, saving your airdodge and double jump, try to recover using other
+                        means. Be mindful that
+                        when recovering high with Uspecial, Absa can chase you with Uair and kill you off top. Where as,
+                        if you try to recover low
+                        or near the stage, she can plant a cloud and contest the edge. Look to immediately wall tech
+                        this. When recovering high,
+                        throwing out Icicles can support you coming down. Or alternatively, the use of Fair armor.</p>
+                    <p><span>For Edgeguarding</span>, the Absa's that like to recover with Uspecial movement, Etalus can
+                        beat her out with proper spacing
+                        on his disjoints. Alternatively, you can crouch cancel her Uspecial and then react with an
+                        immediate punish.
+                        For Absa's that recover low, using icicle with uspecial spike can handle her. Alternatively, if
+                        she uses quick clouds to recover
+                        then look for the opportunity to parry or fair armor through. As always, look for icicle to uair
+                        confirms, or dtilt at edge.</p>
+                    <p><span>Special Thanks</span>, I'd like to thank Bullets for help with the Edgeguarding section,
+                        and to
+                        all of the RoA Academy staff for the great help. With their shared knowledge, victory is in the
+                        bag!</p>
+                    <p><span>Quick Notes TLDR</span>, platform movement to deal with Ftilts and grounded clouds.
+                        Wavedash less, run-to-crouch more.
+                        Fair armor and Disjoint are very helpful when approaching. Save resources when recovering.
+                        Icicles are essential to
+                        apply aerial pressure. Stage selection favors Fire Capital and Merchant Port. Finally, be wary
+                        when approaching Absa from above.</p>
+                </div>
+
+                <div class="walk-img">
+                    <img id="walking" src="img/GuideABSA.png" alt="Space walking astronaut">
+                </div>
+            </section>
+
+            <section class="walk">
+                <div class="walk-text">
+                    <h3>Matchup Guide:</h3>
+                    <h3>Etalus VS Kragg</h3>
+                    <p>This site was created, coded, and maintened through the efforts of Kang96, in order to document
+                        progress and spread growth.</p>
+                    <p>If you wish to support this archive and further development, please feel encouraged to donate any
+                        amount via the button below.</p>
+                    <p>This site was created, coded, and maintened through the efforts of Kang96, in order to document
+                        progress and spread growth.</p>
+                    <p>If you wish to support this archive and further development, please feel encouraged to donate any
+                        amount via the button below.</p>
+                    <p>This site was created, coded, and maintened through the efforts of Kang96, in order to document
+                        progress and spread growth.</p>
+                    <p>If you wish to support this archive and further development, please feel encouraged to donate any
+                        amount via the button below.</p>
+                </div>
+
+                <div class="walk-img">
+                    <img id="walking" src="img/GuideKRAGG.png" alt="Space walking astronaut">
+                </div>
+            </section>
+
+            <section class="walk">
+                <div class="walk-text">
+                    <h3>Matchup Guide:</h3>
+                    <h3>Etalus VS Ranno</h3>
+                    <p>This site was created, coded, and maintened through the efforts of Kang96, in order to document
+                        progress and spread growth.</p>
+                    <p>If you wish to support this archive and further development, please feel encouraged to donate any
+                        amount via the button below.</p>
+                    <p>This site was created, coded, and maintened through the efforts of Kang96, in order to document
+                        progress and spread growth.</p>
+                    <p>If you wish to support this archive and further development, please feel encouraged to donate any
+                        amount via the button below.</p>
+                    <p>This site was created, coded, and maintened through the efforts of Kang96, in order to document
+                        progress and spread growth.</p>
+                    <p>If you wish to support this archive and further development, please feel encouraged to donate any
+                        amount via the button below.</p>
+                </div>
+
+                <div class="walk-img">
+                    <img id="walking" src="img/GuideRANNO.png" alt="Space walking astronaut">
+                </div>
+            </section>
+
+
+            <footer>
+                <p>Copyright Kang96, Rivals of Aether 2020</p>
+            </footer>
+
+            <section></br></section>
+    </div>
+</body>
+
+</html>
