--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       <a href="#">Home</a>
       <a href="navbar/Rankings.html">Rankings</a>
       <a href="navbar/VODArchive.html">VOD Archive</a>
-      <a href="navbar/guides.html">Guides</a>
-      <a href="navbar/Support.html">Support</a>
+      <a href="navbar/Guides.html">Guides</a>
+      <a href="navbar/Moveset.html">Moveset</a>
     </div>
   </div>
 
@@ -61,50 +61,52 @@
     </section>
 
     <section class="visit-planets">
-        <h3>The Global Rankings - 2019 Season 3</h3>
-        <p>As we got further and further away, it [the Earth] diminished in size. Finally it shrank to the size of a
-          marble, the most beautiful you can imagine. That beautiful, warm, living object looked so fragile, so
-          delicate, that if you touched it with a finger it would fall apart. Seeing this has to change a man.</p>
-      </section>
+      <h3>The Global Rankings - 2019 Season 3</h3>
+      <p>As we got further and further away, it [the Earth] diminished in size. Finally it shrank to the size of a
+        marble, the most beautiful you can imagine. That beautiful, warm, living object looked so fragile, so
+        delicate, that if you touched it with a finger it would fall apart. Seeing this has to change a man.</p>
+    </section>
 
-      <section class="space-images">
-        <img src="img/RankedG7.png" class="blast" alt="Rocket blasting off">
-        <img src="img/RankedRCS.png" class="sky" alt="Space sky image">
-        <img src="img/RankedHW.png" class="launch" alt="Launching rocket">
-      </section>
-
-    <section class="visit-planets">
-        <h3>Granted Access To The VOD Archive</h3>
-        <p>As we got further and further away, it [the Earth] diminished in size. Finally it shrank to the size of a
-          marble, the most beautiful you can imagine. That beautiful, warm, living object looked so fragile, so
-          delicate, that if you touched it with a finger it would fall apart. Seeing this has to change a man.</p>
-      </section>
-
-      <section class="space-images">
-        <img src="img/FrameICE.png" class="blast" alt="Rocket blasting off">
-        <img src="img/FrameUAIR.png" class="sky" alt="Space sky image">
-        <img src="img/FrameSMASH.png" class="launch" alt="Launching rocket">
-      </section>
+    <section class="space-images">
+      <img src="img/RankedG7.png" class="blast" alt="Rocket blasting off">
+      <img src="img/RankedRCS.png" class="sky" alt="Space sky image">
+      <img src="img/RankedHW.png" class="launch" alt="Launching rocket">
+    </section>
 
     <section class="visit-planets">
-        <h3>Study The Potential Within Written Guides</h3>
-        <p>As we got further and further away, it [the Earth] diminished in size. Finally it shrank to the size of a
-          marble, the most beautiful you can imagine. That beautiful, warm, living object looked so fragile, so
-          delicate, that if you touched it with a finger it would fall apart. Seeing this has to change a man.</p>
-      </section>
+      <h3>Granted Access To The VOD Archive</h3>
+      <p>As we got further and further away, it [the Earth] diminished in size. Finally it shrank to the size of a
+        marble, the most beautiful you can imagine. That beautiful, warm, living object looked so fragile, so
+        delicate, that if you touched it with a finger it would fall apart. Seeing this has to change a man.</p>
+    </section>
 
-      <section class="space-images">
-        <img src="img/GuideABSA.png" class="blast" alt="Rocket blasting off">
-        <img src="img/GuideKRAGG.png" class="sky" alt="Space sky image">
-        <img src="img/GuideRANNO.png" class="launch" alt="Launching rocket">
-      </section>
+    <section class="space-images">
+      <img src="img/FrameICE.png" class="blast" alt="Rocket blasting off">
+      <img src="img/FrameUAIR.png" class="sky" alt="Space sky image">
+      <img src="img/FrameSMASH.png" class="launch" alt="Launching rocket">
+    </section>
+
+    <section class="visit-planets">
+      <h3>Study The Potential Within Written Guides</h3>
+      <p>As we got further and further away, it [the Earth] diminished in size. Finally it shrank to the size of a
+        marble, the most beautiful you can imagine. That beautiful, warm, living object looked so fragile, so
+        delicate, that if you touched it with a finger it would fall apart. Seeing this has to change a man.</p>
+    </section>
+
+    <section class="space-images">
+      <img src="img/GuideABSA.png" class="blast" alt="Rocket blasting off">
+      <img src="img/GuideKRAGG.png" class="sky" alt="Space sky image">
+      <img src="img/GuideRANNO.png" class="launch" alt="Launching rocket">
+    </section>
 
     <section class="walk">
       <div class="walk-text">
         <h3>Thank You</h3>
         <h3>For Browsing</h3>
-        <p>This site was created, coded, and maintened through the efforts of Kang96, in order to document progress and spread growth.</p>
-        <p>If you wish to support this archive and further development, please feel encouraged to donate any amount via the button below.</p>
+        <p>This site was created, coded, and maintened through the efforts of Kang96, in order to document progress and
+          spread growth.</p>
+        <p>If you wish to support this archive and further development, please feel encouraged to donate any amount via
+          the button below.</p>
 
         <button class="button-style">Donate</button>
 
