--- a/navbar/Guides.html
+++ b/navbar/Guides.html
@@ -32,7 +32,7 @@
             <a href="Rankings.html">Rankings</a>
             <a href="VODArchive.html">VOD Archive</a>
             <a href="Guides.html">Guides</a>
-            <a href="Support.html">Support</a>
+            <a href="Moveset.html">Moveset</a>
         </div>
     </div>
 
